--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,10 +4,10 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: #ccc 0 1px 5px;
+    box-shadow: #ccc 0 1px 1px;
     height: 10vh;
     position: fixed;
-    top: 0 !important;
+    top: 0;
 }
 
 .content-header {
