--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -20,7 +20,7 @@
 }
 
 main {
-    margin-top: 67px;
+    margin-top: 10.3vh;
 }
 
 a {
@@ -33,4 +33,8 @@ body,
     background-color: var(--background-main-collor);
     font-family: 'Open Sans', sans-serif;
     height: 100vh;
+}
+
+li {
+    list-style: none;
 }
