--- a/src/pages/jobs/styles.css
+++ b/src/pages/jobs/styles.css
@@ -3,7 +3,6 @@
     background-size: cover;
     height: 38vh;
     display: flex;
-    align-items: center;
     justify-content: center;
     text-align: center;
     color: var(--highlight-text-collor);
@@ -14,8 +13,10 @@
     height: inherit;
     padding: 15px;
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    border: solid 1px rgb(241, 15, 154);
 }
 
 .presentation h1 {
@@ -34,8 +35,8 @@
 }
 
 .presentation div select {
-    width: 30vw;
-    height: 45px;
+    width: 100%;
+    height: 40px;
     border-radius: 1px;
     border: none;
     font-size: 1.3rem;
@@ -43,7 +44,9 @@
 
 .presentation .search-group {
     display: flex;
-    width: fit-content;
+    flex-direction: row;
+    width: 50%;
+    border: solid 1px violet;
 }
 
 .search-group>div {
@@ -52,4 +55,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.jobs-list-container {
+    margin-left: 5vw;
+    padding-top: 50px;
+    width: 90vw;
+    display: flex;
+    justify-content: space-between;
+    /* border: solid 1px violet; */
+}
+
+.filters-container {
+    height: 400px;
+    width: 25%;
+    background-color: aqua;
+    /* border: solid 1px gold; */
 }
