--- a/src/pages/jobs/styles.css
+++ b/src/pages/jobs/styles.css
@@ -82,12 +82,21 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 45px;
-    /* height: 58px; */
 }
 
 .filter:nth-child(4) ul {
     display: flex;
     flex-direction: column;
+}
+
+.filter:first-child {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.filter:first-child h2 {
+    margin-right: 15px;
 }
 
 .filter h2 {
@@ -101,15 +110,6 @@
 .filter ul {
     display: flex;
 }
-
-
-/* .filter ul li {
-    background-color: #f4f4f4;
-    border-radius: 15px;
-    margin-right: 10px;
-    padding: 10px;
-    font-size: 0.8rem;
-} */
 
 .filter ul li {
     width: fit-content;
