--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -41,4 +41,11 @@ li {
 
 .tag {
     box-shadow: 0px 0px 2px rgb(0 0 0 / 30%);
+    background-color: #f4f4f4;
+    color: #34495e;
+    width: fit-content;
+    padding: 6px 15px;
+    font-size: 0.9rem;
+    border-radius: 1em;
+    margin: 0 6px 5px 0;
 }
