--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -49,7 +49,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 10px;
+    margin: 0 10px;
     width: fit-content;
 }
 
